<resources>
    <string name="app_name">InfoFrom</string>
    <string name="text_above_rv_default_data">Nearby places</string>
    <string name="text_above_rv_search_res">Search results</string>
    <string name="title_rv_google_reviews">Reviews in Google</string>

    <string name="WEB_API_KEY">AIzaSyCMlZedC-qCI3FrVEovQ49Qg3qlD0BhKFs</string>
    <string name="BING_SEARCH_IMAGES">c61745c5264e49618c39afce7b75c093</string>
    <string name="places_detail_opening_time_close">CLOSE</string>
    <string name="places_detail_opening_time_open">"Opened today : "</string>

    <string name="description_image_2">Image 2</string>
    <string name="description_zoom_touch_close">Expanded image (touch to close)</string>
    <string name="nav_menu_weather">Weather</string>
    <string name="nav_menu_establishments">Establishments</string>
    <string name="nav_menu_road_traffic">Road traffic</string>
    <string name="title_activity_maps">Map</string>
    <string name="nav_menu_search">Search</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="internet_turned_off_error">No Internet Connection</string>
    <string name="no_internet_explaining">Check your internet connection and try again</string>
    <string name="menu_item_categories">Categories</string>
    <string name="main_page_live_info_from">Live info from</string>
    <string name="main_page_from_current_location">from current location</string>
    <string name="main_page_et_hint">Search</string>
    <string name="location_turned_off_error">Make sure you Location is turned on</string>
    <string name="location_turned_off_action">TURN ON</string>
    <string name="internet_turned_off_action">CONNECT</string>


</resources>