<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tstv.infofrom.ui.start_page.StartPageActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/main_page_background"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            >


            <TextView
                android:id="@+id/tv_main_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:text="@string/main_page_live_info_from"
                android:textColor="@android:color/white"
                android:textSize="35sp"
                android:textStyle="bold"
                />

        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

            <AutoCompleteTextView
                android:id="@+id/et_main_page"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/main_page_edit_text"
                android:clickable="true"
                android:textCursorDrawable="@null"
                android:dropDownHeight="150dp"
                android:maxLines="1"
                android:hint="@string/main_page_et_hint"
                android:paddingLeft="16dp"
                android:paddingRight="32dp"
                android:textColor="@color/white"
                android:textColorHint="@color/off_white"
                android:textSize="20sp"
                android:layout_gravity="center"
                />

            <Button
                android:id="@+id/btn_main_page_autocomplete_clear"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="end|center_vertical"
                android:background="@drawable/ic_clear_white_36dp"
                android:layout_marginRight="32dp"
                />

        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            >

            <TextView
                android:id="@+id/tv_main_page_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:text="or"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="28sp"
                />

            <Button
                android:id="@+id/btn_main_page_current_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/view_boarder"
                android:clickable="true"
                android:padding="8dp"
                android:text="@string/main_page_from_current_location"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                />

        </RelativeLayout>

    </LinearLayout>


</RelativeLayout>
